kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clamify-api-deployment
  labels:
    app: clamify-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clamify-api
  template:
    metadata:
      labels:
        app: clamify-api
    spec:
      containers:
      - name: clamify-api
        image: ghcr.io/cdconn00/clamify-api:latest
        imagePullPolicy: Always
