kubernetes/dev-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-clamify-api
  labels:
    app: dev-clamify-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dev-clamify-api
  template:
    metadata:
      labels:
        app: dev-clamify-api
    spec:
      containers:
      - name: dev-clamify-api
        image: ghcr.io/cdconn00/clamify-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
