kubernetes/prod-service.yml
apiVersion: v1
kind: Service
metadata:
  name: clamify-api-service
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: clamify-api
  sessionAffinity: None
  type: ClusterIP
