kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: clamify-api-service
spec:
  selector:
    app: clamify-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
