kubernetes/prod-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
  labels:
    name: clamify-api-ingress
  name: clamify-api-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: api.clamify.org
    http:
      paths:
      - backend:
          service:
            name: clamify-api-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - api.clamify.org
    secretName: api-tls-secret
status:
  loadBalancer:
    ingress:
    - <Load balancer external ip goes here>
